# docxtotxt

./: .gitignore  CMakeLists.txt  MainDocParser.cpp  MainDocParser.h  ParagraphParser.cpp  ParagraphParser.h  Readme.txt  main.cpp  parser.cpp  parser.h
Libs/: tinyxml2.cpp
analysisReports/dynamic/: Valgrind.xml  valgrind_docx.xml  valgrind_pptx.xml  valgrind_xlsx.xml
analysisReports/static/: ClangTidy.xml  Cppcheck.xml  RATS.xml  gprof.txt
doxygen/: doxygen_config
doxygen/html/: BufferWriter_8h_source.html  CommonFunctions_8h_source.html  DocCommons_8h_source.html  DocParser_8h_source.html  DocumentCommons_8h_source.html  DocumentLoader_8h_source.html  DocumentMetaDataCommons_8h_source.html  DrawingParser_8h_source.html  MainDocParser_8h_source.html  ParagraphCommons_8h_source.html  ParagraphParser_8h_source.html  Parser_8h_source.html  PptCommons_8h_source.html  PptParser_8h_source.html  TableCommons_8h_source.html  TableParser_8h_source.html  XlsCommons_8h_source.html  XlsParser_8h_source.html  annotated.html  classDrawing_1_1DrawingParser-members.html  classDrawing_1_1DrawingParser.html  classLoader_1_1DocumentLoader-members.html  classLoader_1_1DocumentLoader.html  classParser-members.html  classParser.html  classParser__inherit__graph.map  classParser__inherit__graph.md5  classdoc_1_1DocParser-members.html  classdoc_1_1DocParser.html  classdocxtotxt_1_1BufferWriter-members.html  classdocxtotxt_1_1BufferWriter.html  classdocxtotxt_1_1DocParser-members.html  classdocxtotxt_1_1DocParser.html  classdocxtotxt_1_1DocParser__coll__graph.map  classdocxtotxt_1_1DocParser__coll__graph.md5  classdocxtotxt_1_1DocParser__inherit__graph.map  classdocxtotxt_1_1DocParser__inherit__graph.md5  classdocxtotxt_1_1DocumentLoader-members.html  classdocxtotxt_1_1DocumentLoader.html  classdocxtotxt_1_1DocumentLoader__coll__graph.map  (+334 more)
doxygen/latex/: annotated.tex  classDrawing_1_1DrawingParser.tex  classLoader_1_1DocumentLoader.tex  classParser.tex  classParser__inherit__graph.md5  classdoc_1_1DocParser.tex  classdocxtotxt_1_1BufferWriter.tex  classdocxtotxt_1_1DocParser.tex  classdocxtotxt_1_1DocParser__coll__graph.md5  classdocxtotxt_1_1DocParser__inherit__graph.md5  classdocxtotxt_1_1DocumentLoader.tex  classdocxtotxt_1_1DocumentLoader__coll__graph.md5  classdocxtotxt_1_1DrawingParser.tex  classdocxtotxt_1_1MainDocParser.tex  classdocxtotxt_1_1ParagraphParser.tex  classdocxtotxt_1_1Parser.tex  classdocxtotxt_1_1Parser__coll__graph.md5  classdocxtotxt_1_1Parser__inherit__graph.md5  classdocxtotxt_1_1PptParser.tex  classdocxtotxt_1_1PptParser__coll__graph.md5  classdocxtotxt_1_1PptParser__inherit__graph.md5  classdocxtotxt_1_1TableParser.tex  classdocxtotxt_1_1XlsParser.tex  classdocxtotxt_1_1XlsParser__coll__graph.md5  classdocxtotxt_1_1XlsParser__inherit__graph.md5  classparagraph_1_1ParagraphParser.tex  classppt_1_1PptParser.tex  classprsr_1_1MainDocParser.tex  classtable_1_1TableParser.tex  classxls_1_1XlsParser.tex  hierarchy.tex  refman.tex  structbuffer.tex  structcell.tex  structcolumnSettings.tex  structdefaultDocSettings.tex  structdefaultDocSettings__coll__graph.md5  structdefaultDocStyles.tex  structdefaultDocStyles__coll__graph.md5  structdocInfo__t.tex  (+99 more)
mainDoc/: DrawingParser.cpp  MainDocParser.cpp  ParagraphParser.cpp  ParagraphParser.h  SectionParser.cpp  SectionParser.h
mainDoc/ParserCommons/: BufferWriter.h  CommonFunctions.h  DocumentCommons.h  DocumentMetaDataCommons.h  ParagraphCommons.h  TableCommons.h
mainDoc/headers/: DocParser.h  DocumentLoader.h  DocumentPropertiesParser.h  DrawingParser.h  MainDocParser.h  ParagraphParser.h  Parser.h  PptParser.h  SectionParser.h  TableParser.h  XlsParser.h
mainDoc/source/: BufferWriter.cpp  DocParser.cpp  DocumentLoader.cpp  DocumentPropertiesParser.cpp  DrawingParser.cpp  MainDocParser.cpp  (+5 more)
tests/: coveregeTest.cpp
(+52 files in other folders)
